content/docs/0.8.x/reference/cli/commands/keptn_generate_docs.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn generate docs"
slug: keptn_generate_docs
---
## keptn generate docs

Generates the markdown documentation for the Keptn CLI

### Synopsis

Generates markdown documentation for the Keptn CLI.

This command can be used to create an up-to-date documentation of the Keptn CLI and as published on: https://keptn.sh/docs

It creates one markdown file per command, suitable for rendering in Hugo.


```
keptn generate docs [flags]
```

### Examples

```
keptn generate docs

keptn generate docs --dir=/some/directory
```

### Options

```
      --dir string   directory where the docs should be written to (default "./docs")
  -h, --help         help for docs
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn generate](../keptn_generate/)	 - Generates the markdown CLI documentation or a support archive

###### Auto generated by spf13/cobra on 19-Nov-2020
